Version 3.5 release Notes

- Add chart legend. See menu Chart / Labels
- Change in projection mapping:
  - Add Mercator projection. 
  - Cartesian and Mercator projection are rotated to the screen center for full sky coverage.
  - Change the default projection to Tangent for FOV up to 90 deg. and Mercator for widther fields.
  - Limit the use of Arc projection to 250 deg. FOV.
- New default star catalog based on Extended Hipparcos to replace the BSC and Sky2000.
- Improved precision of the apparent coordinates (many thanks to P. Wallace for its help):
  - Star parallax
  - Take account of the radial velocity to compute the proper motions.
  - Light deflection by the Sun.
  - Extended time validity for nutation and aberration if using DE422.
- Allow to use Socks proxy.
- Improved precision in the display of FITS images by using WCStools. Can show the images with transparency.
- Add option to only show the meridian lines.
- Increase planet simulation up to 500 positions, no change for comets and asteroids.
- Add user defined objects in catalog setting.
- Can change the color for lines and nebulae from the catalog setting.
- New online Internet resources:
  - Add any catalog from Vizier
  - Search Simbad, NED, Vizier
  - Link object detail to Simbad, NED, HyperLeda
- Extend the allowed date to +/- 200'000 years
- Compute the precession using "New precession expressions, valid for long time intervals, J. Vondrak, 2011"
- Compute DeltaT values from "Five Millennium Canon of Solar Eclipses, Espenak & Meeus, 2006"
- Add Tirion constellation figures created by James Trogolo