@@ -722,6 +722,7 @@ cb9.caption:=rsNo+' 9';
 cb10.caption:=rsNo+' 10';
 CenterMark1.caption:=rsMarkTheChart;
 CheckBox1.Caption:=rsShowLabels;
+CheckBox3.Caption:=rsShowMarkInde;
 Page9.caption:=rsFinderRectan;
 Label308.caption:=rsFinderRectan;
 rb1.caption:=rsNo+' 1';
@@ -736,6 +737,7 @@ rb9.caption:=rsNo+' 9';
 rb10.caption:=rsNo+'10';
 CenterMark2.caption:=rsMarkTheChart;
 CheckBox2.Caption:=rsShowLabels;
+CheckBox4.Caption:=rsShowMarkInde;
 Button2.caption:=rsOK;
 Button4.caption:=rsApply;
 Button5.caption:=rsCancel;
